fixed menu change color on mobile, reduced font size award on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -90,7 +90,7 @@ nav li a {
   transition: color .2s;
 }
 nav li a:hover {
-  text-decoration: line-through;
+  text-decoration: none;
   color: #000;
 }
 .intro {
@@ -158,7 +158,7 @@ nav li a:hover {
   clear: both;
   width: 100%;
   background-color: #000;
-  padding: 80px 30px 0 30px;
+  padding: 90px 30px 0 30px;
   transition: background-color .2s;
   position: relative;
   z-index: 9;
@@ -202,7 +202,7 @@ nav li a:hover {
 .selected-works {
   clear: both;
   width: 100%;
-  padding: 80px 30px 0 30px;
+  padding: 90px 30px 0 30px;
   position: relative;
   background-color: #fff;
   z-index: 9;
@@ -243,8 +243,8 @@ nav li a:hover {
   font-weight: 800;
 }
 .sw-work li h3 span {
-  font-size: 18px;
-  font-weight: 800;
+  font-size: 16px;
+  font-weight: 700;
   display: block;
 
 }
@@ -407,6 +407,9 @@ li a .fa-twitter {
   }
   nav li a {
     font-size: 15px;
+  }
+  nav li a:hover {
+  text-decoration: line-through;
   }
   .intro {
     padding: 160px 40px 0 40px;
